add YouTubeLink thumbnails

--- a/src/posts/yin-yoga.mdx
+++ b/src/posts/yin-yoga.mdx
@@ -45,30 +45,65 @@ Here are some YouTube videos I've found valuable that cover a range of areas.
 
 ### Back, shoulders & neck
 
-[30 min for upper back knots and pain, beginners](https://www.youtube.com/watch?v=94hMk05dTws)
-
-[30 min Tension relief/neck](https://www.youtube.com/watch?v=aKsu112bzHE)
-
-[30 min yin yoga for backbends and spine flexibility](https://www.youtube.com/watch?v=nGTVDNUFCLg)
-
-[40 min upper body yin](https://www.youtube.com/watch?v=Y8GVtS1TPJ8&t=19s)
-
-[45 min for back pain and stiffness](https://www.youtube.com/watch?v=VXQZhZfjiDU)
+<LinkGrid
+  items={[
+    {
+      url: 'https://www.youtube.com/watch?v=94hMk05dTws',
+      title: '30 min for upper back pain (beginners)',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=aKsu112bzHE',
+      title: '30 min Tension relief/neck',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=nGTVDNUFCLg',
+      title: '30 min yin yoga for spinal flexibility',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=Y8GVtS1TPJ8&t=19s',
+      title: '40 min upper body yin',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=VXQZhZfjiDU',
+      title: '45 min for back pain & stiffness',
+    },
+  ]}
+/>
 
 ### Lower back, hips & sciatica
 
-[30 min lower back/sciatica yin](https://www.youtube.com/watch?v=SO_oahIGHsE)
-
-[40 min yin yoga for tight hips](https://www.youtube.com/watch?v=hg-4VfWuLQg)
-
-[60 min yin yoga for runners](https://www.youtube.com/watch?v=WNILMoALHNQ)
+<LinkGrid
+  items={[
+    {
+      url: 'https://www.youtube.com/watch?v=SO_oahIGHsE',
+      title: '30 min lower back/sciatica yin',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=hg-4VfWuLQg',
+      title: '40 min yin for tight hips',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=WNILMoALHNQ',
+      title: '60 min yin for runners',
+    },
+  ]}
+/>
 
 ### Full body
 
-[60 min full body yin (no props)](https://www.youtube.com/watch?v=mzf2kFNf8Yw)
+<LinkGrid
+  items={[
+    {
+      url: 'https://www.youtube.com/watch?v=mzf2kFNf8Yw',
+      title: '60 min full body yin',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=XIOn40YCt8s',
+      title: '60 min full body yin',
+    },
+  ]}
+/>
 
-[60 min full body yin](https://www.youtube.com/watch?v=XIOn40YCt8s)
-
-If you can’t find what you need here, you can do a search for “Yin yoga” & the area you're having trouble with. \
+If you can’t find what you need here, you can do a search for “Yin yoga” & the area you're having trouble with. If you find any that you love send them to me too please 🙂 \
  \
 I hope you enjoy this practice and that it brings you deep relaxation & release.
