add videos to Breath blog post

--- a/src/posts/breath.mdx
+++ b/src/posts/breath.mdx
@@ -58,11 +58,77 @@ It can be hard to access deep breaths during the day unless you’ve already don
 Here are a few ways to connect to the breath early in the day:
 
 - **Exercise** – any kind, but spend some part of it focused on your breath.
-- **Yoga** – breath is core to yoga, so you’ll find connection there.
-- **Breathwork** – try Wim Hof on YouTube or sessions guided by breathwork practitioners.
-- What’s one thing that you do every morning that doesn’t require too much brain power? Put a little sign up next to that saying “Breathe”, then every morning use you’re diaphragm and breathe deeply.
+- **Yoga** – breath is core to a deep yoga practice.
+- **Breathwork** – try out the videos below.
+- **Breath reminder** – What’s something simple that you do every morning? Put a little sign up that reminds you to “Breathe”, use you’re diaphragm and breathe deeply.
 
 ## Go deeper
 
 - [_Breath_ (book) by James Nestor](https://www.google.com/search?q=breath+james+nestor)
 - [_Breath_ summary](https://www.ryandelaney.co/book-notes/breath-summary) – don’t feel like reading the full book? Try this.
+
+## Breathwork videos
+
+These are a great way to get started with a breathwork practice.
+
+Good for connecting to your breath, improving lung capacity & CO2 tolerance, stress relief & more.
+
+**Please avoid/seek doctors approval if you have any of the contraindications listed below the videos.**
+
+<LinkGrid
+  items={[
+    {
+      url: 'https://www.youtube.com/watch?v=jB0mSsn6yRM',
+      title: 'Breathwork for Happiness',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=iMAHAiAD1rc',
+      title: 'Slow Breathwork',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=a4bQBXj0a0Y',
+      title: 'Stress Relief Breathwork',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=QGdFzD8uccw',
+      title: 'Attention Span Meditation',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=uttz-TKTQF4&t',
+      title: '10 Min Morning Breathwork',
+    },
+    {
+      url: 'https://www.youtube.com/watch?v=tybOi4hjZFQ',
+      title: 'Wim Hof Breathing',
+    },
+  ]}
+/>
+
+## ⚠️ Contraindications:
+
+- **Cardiovascular issues**, including:
+  - High blood pressure (uncontrolled)
+  - Heart disease
+  - History of heart attack or stroke
+- **Epilepsy or history of seizures**
+- **Glaucoma** or **retinal detachment**
+- **Aneurysms** (personal or family history)
+- **Recent surgery or physical injury**
+  - Especially affecting the brain, spine, or chest
+- **Severe psychiatric conditions**, including:
+  - Schizophrenia
+  - Bipolar disorder (manic phase)
+  - Dissociative disorders
+- **Pregnancy** (especially 2nd and 3rd trimester)
+- **Severe asthma** (unless cleared by a doctor)
+- **Use of medications** that affect respiratory or cardiovascular function
+- **Osteoporosis** (severe cases where strong breath or movement could cause injury)
+- **Detached from reality or under the influence** of drugs/alcohol
+
+---
+
+## Important Notes
+
+- People with **trauma or PTSD** can still benefit, but may require a **gentler approach** and a skilled facilitator.
+- Some may experience **emotional or physical intensity** during sessions—this is natural, but should be approached with care.
+- Always inform your breathwork facilitator of any **health issues or concerns** before starting a session.
